<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solitario Celta</string>
    <string name="default_NombreFich">save.txt</string>
    <string name="ficheroNotFound">Error, archivo no encontrado</string>

    <string name="txtSinImplementar">¡No implementado aún!</string>
    <string name="txtPrueba">Prueba</string>

    <!-- Opciones -->
    <string name="txtReiniciarPartida">Reiniciar</string>
    <string name="txtOpcionGuardar">Guardar Partida</string>
    <string name="txtOpcionRecuperar">Recuperar Partida</string>
    <string name="txtOpcionMejoresResultados">Mejores Resultados</string>

    <!-- Reiniciar Partida -->
    <string name="txtReiniciarTitulo">Reiniciar Partida</string>
    <string name="txtReiniciarPregunta">¿Desea reiniciar la partida?</string>
    <string name="txtReiniciarAfirmativo">Sí</string>
    <string name="txtReiniciarNegativo">No</string>

    <!-- Guardar Partida -->
    <string name="txtPartidaGuardada">Partida guardada con éxito</string>
    <string name="txtPartidaNoGuardada">La partida no ha podido guardarse</string>

    <!-- Cargar Partida -->
    <string name="txtCargarPartidaTitulo">Cargar Partida</string>
    <string name="txtCargarPartidaPregunta">¿Desea cargar una partida? Se perderán los cambios realizados</string>
    <string name="txtCargarPartidaAfirmativo">Sí</string>
    <string name="txtCargarPartidaNegativo">No</string>
    <string name="txtPartidaCargada">Partida cargada</string>
    <string name="txtPartidaNoCargada">Error al cargar la partida</string>

    <!-- Guardar Puntuacion -->
    <string name="key_NombreJugador">pref_NombreJugador</string>
    <string name="title_NombreJugador">Nombre del jugador</string>
    <string name="default_NombreJugador">Jugador 0</string>
    <string name="txtGuardarBaseDatos">Puntuación guardada en la base de datos</string>

    <!-- Mejores Resultados -->
    <string name="txtMejoresResultados">Mejores Resultados</string>

    <!-- Diálogo Borrar Resultados -->
    <string name="txtBorrarResultados">Borrar Resultados</string>
    <string name="txtBorrarPregunta">¿Desea borrar el historial de resultados?</string>
    <string name="txtBorrarResultadosAfirmativo">Sí</string>
    <string name="txtBorrarResultadosNegativo">No</string>
    <string name="txtResultadosBorrados">Resulados Borrados</string>
    <string name="txtResultadosNoBorrados">Error al borrar resultados</string>


    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Desea jugar otra partida?</string>
    <string name="txtDialogoFinalAfirmativo">Sí</string>
    <string name="txtDialogoFinalNegativo">No</string>

    <!-- Acerca de -->
    <string name="aboutText">Acerca de</string>
    <string name="aboutTitle">¿Cómo se juega?</string>
    <string name="aboutMessage">El juego consiste en ir comiendo piezas
    (en horizontal o en vertical) hasta conseguir que sólo quede una pieza
    en el centro. En cada movimiento, la pieza movida solo puede saltar única una pieza.</string>

    <!-- Preferencias -->
    <string name="preferencesText">Ajustes</string>
    <string name="prefTituloCategoria1">Datos personales</string>
    <string name="prefTituloNombreJugador">Nombre del jugador</string>
    <string name="prefTextoNombreJugador">Pulse para teclear el nombre del jugador</string>
    <string name="prefTituloCategoria2">Ajustes del juego</string>
    <string name="prefTituloCategoria3">Más información…</string>

    <string name="prefLink1Title">Video Solitario Celta</string>
    <string name="prefLink1Summary">Solución al juego</string>
    <string name="prefLink1Data">https://www.youtube.com/watch?v=XsejdyCuhY8/</string>

    <string name="prefLink2Title">¡Visita la web!</string>
    <string name="prefLink2Summary">Accede a la web de MiW</string>
    <string name="prefLink2Data">http://miw.etsisi.upm.es/</string>

</resources>